--- a/package.json
+++ b/package.json
@@ -12,14 +12,6 @@
     "yarn": "^1.22.11",
     "vscode": "^1.22.0"
   },
-  "config": {
-    "clean": [
-      ".yarn/cache",
-      "dist",
-      "node_modules",
-      "yarn.lock"
-    ]
-  },
   "os": [
     "linux"
   ],
@@ -38,5 +30,14 @@
     "custom",
     "GPL-3"
   ],
-  "engineStrict": true
+  "engineStrict": true,
+  "cache": ".cache",
+  "clean": [
+    ".yarn/cache",
+    ".yarn/install-state.gz",
+    "dist",
+    "node_modules",
+    "yarn.lock",
+    ".cache"
+  ]
 }
